Music player finished with progress bar. Might add volume

--- a/index.html
+++ b/index.html
@@ -17,20 +17,19 @@
            </div>
        </div>
 
-    <audio src="/lacura.mp3" id="audio"></audio>
 
        <div class="img-container">
            <img src="/aplayercover.jpg" alt="music-cover">
        </div>
 
        <div class="navigation">
-           <button type="button" id="play" class="action-btn">
+           <button id="play" class="action-btn">
                <i class="fas fa-play"></i>
            </button>
        </div>
 
    </div>
-   <script src="/script.js"></script>
+   <script async src="/script.js"></script>
 </body>
 
 </html>
