--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
     </div>
-    <script async src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
