Testing for github pages v2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
         <div class="img-container">
-            <img src="/aplayercover.jpg" alt="music-cover">
+            <img src="aplayercover.jpg" alt="music-cover">
         </div>
 
         <div class="navigation">
